# artdaq_demo_hdf5

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
artdaq-demo-hdf5/: CMakeLists.txt
artdaq-demo-hdf5/ArtModules/: CMakeLists.txt  HDFFileInput_source.cc  HDFFileOutput_module.cc  ToyHDFFileOutput_module.cc
artdaq-demo-hdf5/ArtModules/detail/: HDFFileReader.hh  ToyFragmentNtuple.hh
artdaq-demo-hdf5/ArtModules/fcl/: hdfInput.fcl  hdfOutput.fcl
artdaq-demo-hdf5/HDF5/: CMakeLists.txt  FragmentDataset.cc  FragmentDataset.hh  MakeDatasetPlugin.cc  MakeDatasetPlugin.hh
artdaq-demo-hdf5/HDF5/hep-hpc/: CMakeLists.txt  FragmentNtuple.hh  FragmentNtuple_dataset.cc  ToyFragmentNtuple.hh  ToyFragmentNtuple_dataset.cc
artdaq-demo-hdf5/HDF5/hep_hpc/: CMakeLists.txt  FragmentNtuple.hh  FragmentNtuple_dataset.cc  ToyFragmentNtuple.hh  ToyFragmentNtuple_dataset.cc
artdaq-demo-hdf5/HDF5/highFive/: CMakeLists.txt  highFiveDataset.hh  highFiveDatasetHelper.hh  highFiveDataset_dataset.cc  highFiveGeoCmpltPDSPSample_dataset.cc  highFiveGeoSplitPDSPSample_dataset.cc  highFiveGroupedDataset_dataset.cc  highFiveNtupleDataset.hh  highFiveNtupleDataset_dataset.cc  highFiveTimeBasedPDSPSample_dataset.cc
doc/: CMakeLists.txt
ups/: product_deps
